--- a/bin/PublicAuthenticationPortal.dll.config
+++ b/bin/PublicAuthenticationPortal.dll.config
@@ -31,7 +31,7 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="ReportingEntities" connectionString="metadata=res://*/ReportingEntities.csdl|res://*/ReportingEntities.ssdl|res://*/ReportingEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=asl-app2;initial catalog=Reporting;persist security info=True;user id=sa;password=Icecool1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="ReportingEntities" connectionString="metadata=res://*/ReportingEntities.csdl|res://*/ReportingEntities.ssdl|res://*/ReportingEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=asl-cl-db1;initial catalog=Reporting;persist security info=True;user id=sa;password=Icecool1;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
